--- a/src/assets/components/icons/fontawesome/_fontawesome.scss
+++ b/src/assets/components/icons/fontawesome/_fontawesome.scss
@@ -17,7 +17,7 @@ $fa-font-path: "~@fortawesome/fontawesome-free/webfonts";
 @import "~@fortawesome/fontawesome-free/scss/stacked";
 @import "~@fortawesome/fontawesome-free/scss/icons";
 @import "~@fortawesome/fontawesome-free/scss/screen-reader";
-
+@import "~@fortawesome/fontawesome-free/scss/brands";
 .fa-2x {
   line-height: 2;
 }
