--- a/src/assets/layout/header/_header-base.scss
+++ b/src/assets/layout/header/_header-base.scss
@@ -70,7 +70,7 @@
   .logo-src {
     height: $logo-height;
     width: $logo-width;
-    background: url('utils/images/logo-inverse.png');
+    content:url('utils/images/mapfre-logo-white-sm.svg');
   }
 }
 
