--- a/src/assets/layout/header/themes/_header-dark.scss
+++ b/src/assets/layout/header/themes/_header-dark.scss
@@ -111,7 +111,7 @@
 
     .app-header__logo {
       .logo-src {
-        background: url('utils/images/logo-inverse.png');
+        content:url('utils/images/mapfre-logo-white-sm.svg');
       }
     }
 
