--- a/src/assets/layout/header/themes/_header-light.scss
+++ b/src/assets/layout/header/themes/_header-light.scss
@@ -121,7 +121,7 @@
 
     .app-header__logo {
       .logo-src {
-        background: url('utils/images/logo.png');
+        content:url('utils/images/mapfre-logo-white-sm.svg');
       }
     }
 
