--- a/src/layout/AppFooter/footer.hbs
+++ b/src/layout/AppFooter/footer.hbs
@@ -4,30 +4,29 @@
             <div class="app-footer-left">
                 <ul class="nav">
                     <li class="nav-item">
-                        <a href="javascript:void(0);" class="nav-link">
-                            Footer Link 1
-                        </a>
+                        <a href="http://www.mapfre.com.hn" title="Mapfre Home Page" target="_blank"><b>MAPFRE</b> &copy; 2020</a>
+                        &ensp;|
                     </li>
                     <li class="nav-item">
-                        <a href="javascript:void(0);" class="nav-link">
-                            Footer Link 2
-                        </a>
+                        &ensp;<a href="http://www.mapfregrupo.com/corporativo/grupomapfre/es/cinformativo/presencia-internacional-mapfre.shtml" target="_blank">MAPFRE en el mundo</a>&ensp;|
+                    </li>
+                    <li class="nav-item">
+                        &ensp;<a href="http://www.fundacionmapfre.org/fundacion/es_es/default.jsp" target="_blank">Fundación MAPFRE</a>&ensp;|
+                    </li>
+                    <li class="nav-item">
+                        &ensp;<a href="http://www.cnbs.gob.hn/" target="_blank">Comisión Nacional de Bancos y Seguros</a>
                     </li>
                 </ul>
             </div>
             <div class="app-footer-right">
                 <ul class="nav">
                     <li class="nav-item">
-                        <a href="javascript:void(0);" class="nav-link">
-                            Footer Link 3
-                        </a>
+                        <a href="http://www.facebook.com/MAPFREHN" title="Facebook" target="_blank"><i class="fab fa-facebook-square fa-2x"></i></a>
+                        &ensp;
                     </li>
                     <li class="nav-item">
-                        <a href="javascript:void(0);" class="nav-link">
-                            <div class="badge badge-success mr-1 ml-0">
-                                <small>NEW</small>
-                            </div>
-                            Footer Link 4
+                        <a href="https://instagram.com/mapfre_hn?igshid=1s6xhx0qvrvu5" title="Instagram" target="_blank">
+                            <i class="fab fa-instagram fa-2x"></i>
                         </a>
                     </li>
                 </ul>
