--- a/src/layout/base.hbs
+++ b/src/layout/base.hbs
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="es-hn">
 
 <head>
     <meta charset="utf-8">
@@ -10,21 +10,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, shrink-to-fit=no" />
     <meta name="description" content="{{ htmlWebpackPlugin.options.description }}">
     <meta name="msapplication-tap-highlight" content="no">
-    <!--
-    =========================================================
-    * ArchitectUI HTML Theme Dashboard - v1.0.0
-    =========================================================
-    * Product Page: https://dashboardpack.com
-    * Copyright 2019 DashboardPack (https://dashboardpack.com)
-    * Licensed under MIT (https://github.com/DashboardPack/architectui-html-theme-free/blob/master/LICENSE)
-    =========================================================
-    * The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
-    -->
 </head>
 <body>
     <div class="app-container app-theme-white body-tabs-shadow fixed-sidebar fixed-header">
         {{> AppHeader/header }}
-        {{> ThemeOptions/theme-options }}
         <div class="app-main">
             {{> @partial-block }}
         </div>
