--- a/src/assets/layout/responsive/_responsive-base.scss
+++ b/src/assets/layout/responsive/_responsive-base.scss
@@ -118,7 +118,7 @@
     }
 
     .app-header__content {
-      visibility: hidden;
+      visibility: false;
       opacity: 0;
       box-shadow: $box-shadow-default;
       position: absolute;
@@ -129,7 +129,7 @@
       background: $white;
       @include border-radius(50px);
       padding: 0 10px;
-      overflow: hidden;
+      overflow: block;
 
       .header-btn-lg {
         margin-left: .5rem;
@@ -148,7 +148,6 @@
         top: $app-header-height + 20;
       }
     }
-
     .app-header__mobile-menu {
       display: flex;
       order: 1;
