--- a/src/assets/layout/sidebar/modifiers/_navmenu-vertical.scss
+++ b/src/assets/layout/sidebar/modifiers/_navmenu-vertical.scss
@@ -55,6 +55,7 @@
       margin: .1rem 0;
 
       &:hover {
+        color: $white;
         background: $dropdown-link-hover-bg;
         text-decoration: none;
 
@@ -77,7 +78,7 @@
     }
 
     a.mm-active {
-      color: $gray-800;
+      color: $white;
       background: $dropdown-link-hover-bg;
       font-weight: bold;
     }
@@ -127,7 +128,7 @@
       padding: 0 $layout-spacer-x 0;
 
       &:hover {
-        color: $primary;
+        color: $white;
       }
 
       .metismenu-icon {
@@ -135,7 +136,7 @@
       }
 
       &.mm-active {
-        color: $primary;
+        color: $white;
         background: $dropdown-link-hover-bg;
         font-weight: bold;
       }
