--- a/src/layout/AppHeader/Components/header-right.hbs
+++ b/src/layout/AppHeader/Components/header-right.hbs
@@ -4,10 +4,10 @@
             <div class="widget-content-left">
                 <div class="btn-group">
                     <a data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="p-0 btn">
-                        <img width="42" class="rounded-circle" src="assets/images/avatars/1.jpg" alt="">
-                        <i class="fa fa-angle-down ml-2 opacity-8"></i>
+                        <i class="fas fa-user-circle fa-2x"></i>
+                        <i class="fa fa-angle-down ml-2 opacity-8" style="vertical-align: super;"></i>
                     </a>
-                    <div tabindex="-1" role="menu" aria-hidden="true" class="dropdown-menu dropdown-menu-right">
+                    <div class="dropdown-menu dropdown-menu-right" tabindex="-1" role="menu" aria-hidden="true" >
                         <button type="button" tabindex="0" class="dropdown-item">User Account</button>
                         <button type="button" tabindex="0" class="dropdown-item">Settings</button>
                         <h6 tabindex="-1" class="dropdown-header">Header</h6>
@@ -16,19 +16,6 @@
                         <button type="button" tabindex="0" class="dropdown-item">Dividers</button>
                     </div>
                 </div>
-            </div>
-            <div class="widget-content-left  ml-3 header-user-info">
-                <div class="widget-heading">
-                    Alina Mclourd
-                </div>
-                <div class="widget-subheading">
-                    VP People Manager
-                </div>
-            </div>
-            <div class="widget-content-right header-user-info ml-3">
-                <button type="button" class="btn-shadow p-1 btn btn-primary btn-sm show-toastr-example">
-                    <i class="fa text-white fa-calendar pr-1 pl-1"></i>
-                </button>
             </div>
         </div>
     </div>
