--- a/src/layout/AppHeader/Components/logo.hbs
+++ b/src/layout/AppHeader/Components/logo.hbs
@@ -1,5 +1,5 @@
 <div class="app-header__logo">
-    <div class="logo-src"></div>
+    <img class="logo-src" alt="MAPFRE Logo"/>
     <div class="header__pane ml-auto">
         <div>
             <button type="button" class="hamburger close-sidebar-btn hamburger--elastic" data-class="closed-sidebar">
@@ -20,11 +20,18 @@
     </div>
 </div>
 <div class="app-header__menu">
-    <span>
-        <button type="button" class="btn-icon btn-icon-only btn btn-primary btn-sm mobile-toggle-header-nav">
-            <span class="btn-icon-wrapper">
-                <i class="fa fa-ellipsis-v fa-w-6"></i>
-            </span>
-        </button>
-    </span>
+    <div class="btn-group">
+        <a data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="p-0 btn" style="color: white;">
+            <i class="fas fa-user-circle fa-2x"></i>
+            <i class="fa fa-angle-down ml-2 opacity-8" style="vertical-align: super;"></i>
+        </a>
+        <div class="dropdown-menu dropdown-menu-right" tabindex="-1" role="menu" aria-hidden="true" >
+            <button type="button" tabindex="0" class="dropdown-item">User Account2</button>
+            <button type="button" tabindex="0" class="dropdown-item">Settings</button>
+            <h6 tabindex="-1" class="dropdown-header">Header</h6>
+            <button type="button" tabindex="0" class="dropdown-item">Actions</button>
+            <div tabindex="-1" class="dropdown-divider"></div>
+            <button type="button" tabindex="0" class="dropdown-item">Dividers</button>
+        </div>
+    </div>
 </div>
