--- a/src/layout/AppHeader/header.hbs
+++ b/src/layout/AppHeader/header.hbs
@@ -1,4 +1,4 @@
-<div class="app-header header-shadow">
+<div class="app-header header-shadow bg-danger header-text-light">
     {{> Components/logo }}
     <div class="app-header__content">
         <div class="app-header-left">
