--- a/src/assets/base.scss
+++ b/src/assets/base.scss
@@ -1,3 +1,16 @@
+/*!
+ =========================================================
+ * MAPFRE PWA TEMPLATE 
+ =========================================================
+ * Autor: Roberto Zapata from Honduras
+ * Contact: rzapata@mapfre.com.hn imzapatta@gmail.com
+ * Project Repository https://github.com/imzapatta/template-mapfre-hn
+ =========================================================
+ * It's a fork of DashboardPack. I used the minimum of this project like animation y Home Layout. 
+ * Licensed under MIT (https://github.com/DashboardPack/architectui-html-theme-free/blob/master/LICENSE)
+ =========================================================
+ */
+
 // BOOTSTRAP 4 VARIABLES
 
 @import "components/bootstrap4/functions";
