--- a/src/DemoPages/dashboards/dashboard-example-1.hbs
+++ b/src/DemoPages/dashboards/dashboard-example-1.hbs
@@ -1,7 +1,7 @@
 {{#> base }}
     {{> AppSidebar/sidebar dashboards-eg-1=this }}
-    <div class="app-main__outer">
-        <div class="app-main__inner">
+    <div class="app-main__outer" style="height: 100vh;">
+        <div class="app-main__inner mb-5">
             {{> AppMain/page-title }}
             <div class="row">
                 <div class="col-md-6 col-xl-4">
