--- a/src/assets/elements/_cards.scss
+++ b/src/assets/elements/_cards.scss
@@ -1,5 +1,17 @@
 // CARDS
 
+.dropdown-menu-header{
+
+  .dropdown-menu-header-inner{
+    padding: 1rem .5rem;
+    position: relative;
+  }
+
+  .menu-header-content.text-left {
+    padding-left: 0.5rem;
+  }
+}
+
 .card {
   box-shadow: $box-shadow-default;
   border-width: 0;
@@ -10,6 +22,7 @@
 
     .dropdown-menu-header-inner {
       @include border-top-radius($card-border-radius);
+ 
     }
   }
 
