--- a/src/assets/elements/_dropdown.scss
+++ b/src/assets/elements/_dropdown.scss
@@ -7,6 +7,9 @@
   0 0.125rem 0.1875rem rgba(darken($primary, 50%), .03);
 
   margin: $dropdown-spacer;
+  padding-top: 0;
+
+  min-width: 20rem;
 
   &.dropdown-menu-right {
     right: 0 !important;
