--- a/src/assets/layout/responsive/_responsive-base.scss
+++ b/src/assets/layout/responsive/_responsive-base.scss
@@ -47,13 +47,14 @@
 
         ul li a {
           text-indent: initial;
-          padding: 0 $layout-spacer-x 0 45px;
+          padding: 0 $layout-spacer-x 0 0.5rem;
         }
 
         .metismenu-icon {
-          text-indent: initial;
-          left: 5px;
-          margin-left: 0;
+          position: unset;
+          // text-indent: initial;
+          // left: 5px;
+          // margin-left: 0;
         }
 
         .metismenu-state-icon {
@@ -118,7 +119,7 @@
     }
 
     .app-header__content {
-      visibility: false;
+      visibility: hidden;;
       opacity: 0;
       box-shadow: $box-shadow-default;
       position: absolute;
@@ -129,7 +130,7 @@
       background: $white;
       @include border-radius(50px);
       padding: 0 10px;
-      overflow: block;
+      overflow: hidden;
 
       .header-btn-lg {
         margin-left: .5rem;
