--- a/src/assets/layout/sidebar/modifiers/_closed-sidebar.scss
+++ b/src/assets/layout/sidebar/modifiers/_closed-sidebar.scss
@@ -34,8 +34,19 @@
 
       .metismenu-icon {
         text-indent: 0;
-        left: 50%;
-        margin-left: -17px;
+        // left: 50%;
+        // margin-left: -17px;
+        // text-align: center;
+        // width: 34px;
+        // height: 34px;
+        line-height: 34px;
+        position: absolute;
+        left: 5px;
+        top: 50%;
+        margin-top: -17px;
+        // font-size: 1.5rem;
+        // opacity: .3;
+        transition: color 300ms;
       }
 
       .metismenu-state-icon {
@@ -77,14 +88,15 @@
 
           li a {
             text-indent: initial;
-            padding: 0 $layout-spacer-x 0 45px;
+            padding: 0 $layout-spacer-x 0 0.5rem;
           }
         }
 
         .metismenu-icon {
-          text-indent: initial;
-          left: 5px;
-          margin-left: 0;
+          position: unset;
+          // text-indent: initial;
+          // left: 5px;
+          // margin-left: 0;
         }
 
         .metismenu-state-icon {
