--- a/src/assets/base.scss
+++ b/src/assets/base.scss
@@ -94,17 +94,17 @@
 // FontAwesome
 @import "components/icons/fontawesome/fontawesome";
 // P7 Icons
-@import "components/icons/p7icons";
+//@import "components/icons/p7icons";
 // Hamburger button
 @import "components/hamburgers/hamburgers";
 // Notifications
-@import "components/notifications/toastr";
+// @import "components/notifications/toastr";
 // Popovers & Tooltips
-@import "components/popovers-tooltips/popovers-tooltips";
-// Calendar
-@import "components/calendar/calendar";
-// Maps
-@import "components/maps/vector-maps";
+// @import "components/popovers-tooltips/popovers-tooltips";
+// // Calendar
+// @import "components/calendar/calendar";
+// // Maps
+// @import "components/maps/vector-maps";
 // Responsive
 @import "layout/responsive/responsive-base";
 // DEMO
