--- a/src/assets/components/bootstrap4/_toasts.scss
+++ b/src/assets/components/bootstrap4/_toasts.scss
@@ -1,14 +1,14 @@
 .toast {
+  flex-basis: $toast-max-width;
   max-width: $toast-max-width;
-  overflow: hidden; // cheap rounded corners on nested items
-  font-size: $toast-font-size; // knock it down to 14px
+  font-size: $toast-font-size;
+  color: $toast-color;
   background-color: $toast-background-color;
   background-clip: padding-box;
   border: $toast-border-width solid $toast-border-color;
-  border-radius: $toast-border-radius;
   box-shadow: $toast-box-shadow;
-  backdrop-filter: blur(10px);
   opacity: 0;
+  border-radius: $toast-border-radius;
 
   &:not(:last-child) {
     margin-bottom: $toast-padding-x;
