--- a/src/assets/components/bootstrap4/_variables.scss
+++ b/src/assets/components/bootstrap4/_variables.scss
@@ -870,6 +870,7 @@ $toast-max-width: 350px !default;
 $toast-padding-x: .75rem !default;
 $toast-padding-y: .25rem !default;
 $toast-font-size: .875rem !default;
+$toast-color:     null !default;
 $toast-background-color: rgba($white, .85) !default;
 $toast-border-width: 1px !default;
 $toast-border-color: rgba(0, 0, 0, .1) !default;
