--- a/src/assets/layout/sidebar/modifiers/_closed-sidebar.scss
+++ b/src/assets/layout/sidebar/modifiers/_closed-sidebar.scss
@@ -226,4 +226,10 @@
       margin-left: 0 !important;
     }
   }
+
+  .app-main__inner {
+    .main-card{
+      max-width: 1690px !important;
+    }
+  }
 }
