--- a/src/assets/base.scss
+++ b/src/assets/base.scss
@@ -82,6 +82,7 @@
 @import "elements/listgroup";
 @import "elements/forms";
 @import "elements/pagination";
+@import "elements/login/login";
 
 // DASHBOARD BOXES
 
