--- a/src/assets/elements/_modals.scss
+++ b/src/assets/elements/_modals.scss
@@ -9,7 +9,7 @@
   @include border-bottom-radius($border-radius);
 }
 
-.modal-dialog {
-  box-shadow: $box-shadow-lg-default;
-  @include border-radius($border-radius);
-}
+// .modal-dialog {
+//   box-shadow: $box-shadow-lg-default;
+//   @include border-radius($border-radius);
+// }
