--- a/src/assets/components/icons/fontawesome/_fontawesome.scss
+++ b/src/assets/components/icons/fontawesome/_fontawesome.scss
@@ -6,6 +6,8 @@ $fa-font-path: "~@fortawesome/fontawesome-free/webfonts";
 
 @import "~@fortawesome/fontawesome-free/scss/solid";
 
+@import "~@fortawesome/fontawesome-free/scss/regular";
+
 @import "~@fortawesome/fontawesome-free/scss/mixins";
 @import "~@fortawesome/fontawesome-free/scss/core";
 @import "~@fortawesome/fontawesome-free/scss/larger";
